Fixed the three terminal capacitor routing (five capacitors).

--- a/STAR/Software/Pi/FlightSoftware.html
+++ b/STAR/Software/Pi/FlightSoftware.html
@@ -1,1 +1,3 @@
+<html>
 <a href="http://nearspace.camdenmiller.com/archives/Payoad%20Design%20Files/RockSatX/">Flight Software Image (16GB)</a>
+</html>
